tests/baselines/reference/voidOperatorInvalidOperations.errors.txt
==== tests/cases/compiler/voidOperatorInvalidOperations.ts (3 errors) ====
    // Unary operator void
    
    // operand before void
    var ANY = ANY void ;    //expect error
                  ~~~~
!!! voidOperatorInvalidOperations.ts(4,15): error TS1005: ',' expected.
                       ~
!!! voidOperatorInvalidOperations.ts(4,20): error TS1003: Identifier expected.
    
    // miss an operand
    var ANY1 = void ;
                    ~
!!! voidOperatorInvalidOperations.ts(7,17): error TS1003: Identifier expected.